Using grid instead of flex layout to prevent a weird zooming bug:
Some images got stretched instead of overflowing when they got to big for the container. This seems not to happen with `display: grid`.

--- a/app/style.css
+++ b/app/style.css
@@ -3,10 +3,10 @@ body {
 }
 
 #image-container {
+    display: grid;
     overflow: hidden;
     position: absolute;
     inset: 0;
-    display: flex;
 }
 
 #image-container.scroll {
